--- a/style.tex
+++ b/style.tex
@@ -75,7 +75,7 @@ $endif$
 \setupfloat[figure][default={here,nonumber}]
 \setupfloat[table][default={here,nonumber}]
 
-\setupthinrules[width=15em, color=cyan]
+\setupthinrules[width=15em, color=base01]
 
 \setupdelimitedtext[blockquote][before={\setupalign[middle]}, indentnext=no]
 
